
  * Reading and parsing Journal file optimized (~ 2 times faster for UTF-8 filenames, and ~3 times faster
  for ASCII-only filenames)

### 2013-06-01 v0.961 beta

  * Enhancement: segment-size option added for restore-completed command for multi-segment downloads

  * Documentation: restore-completed documentation updated

  * Enhancement: Now all downloads performed to temp files. Temp file renamed to real files only when download succeed.

  * Fixed: If server closes connection, after sending headers (when downloading files), this was not detected and no
  error was thrown (it's not reported by underlying HTTP library for case non-chunked-transfer)

  * Fixed: some other errors from underlying HTTP library detected

  * Fixed: it there was more than 100 retries for a request (due to timeout/etc), program now terminates with error,
  instead of reporting success.

  * Fixed: for systems with non-UTF-8 filesystems, file modification time sometime was not adjusted after files
  downloaded with restore-completed command

  * Fixed: SIGHUP added to list of signal for graceful handling (i.e terminate fast when you close terminal)

  * Fixed: Exceptions error message placeholder were not resolved when error printed

### 2013-05-26 v0.957 beta

  * STS/IAM security tokens support added

  * Documentation: typo fixed - setup instructions was incorrect - need to install LWP::Protocol::https instead of
  LWP::Useragent::https (LWP::Protocol::https is a typo, and does not exists)

  * Documentation: described behavior of restore and restore-completed commands

### 2013-05-26 v0.956 beta

  * Fixed - 'Restore' command now skips retrieval of files, which were retrieved by mtglacier in last 24h (retrievals
  tracked in Journal using system clock). Also existing files skipped. Previous behavior was: skip only existing files. 

  * Some more error handling in HTTP processing

### 2013-05-26 v0.955 beta

  * Fixed - timeout error from underlying HTTP Library was not detected
