@@ -26,7 +26,7 @@ no_index:
 provides:
   App::MtAws:
     file: lib/App/MtAws.pm
-    version: 0.961_3
+    version: 0.961_4
   App::MtAws::CheckLocalHashCommand:
     file: lib/App/MtAws/CheckLocalHashCommand.pm
     version: 0
@@ -155,8 +155,7 @@ requires:
   IO::Pipe: 0
   IO::Select: 0
   JSON::XS: 0
-  LWP::Protocol::https: 0
-  LWP::UserAgent: 6
+  LWP: 0
   List::Util: 0
   POSIX: 0
   PerlIO::encoding: 0
@@ -174,4 +173,4 @@ resources:
   homepage: http://mt-aws.com/
   license: http://www.gnu.org/licenses/gpl-3.0.txt
   repository: https://github.com/vsespb/mt-aws-glacier
-version: 0.961_3
+version: 0.961_4
